--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <main>
         <section class="login">
             <div class="image">
-
+                image
             </div>
             <div class="form">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form method="post">
-                    
+
                 </form>
             </div>
         </section>
