--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
 </head>
 <body>
     <main>
@@ -17,7 +19,22 @@
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form method="post">
-
+                    <div>
+                        <label for="iemail"><span class="material-symbols-outlined">
+                            person
+                            </span></label>
+                        <input type="email" name="email" id="iemail">
+                    </div>
+                    <div>
+                        <label for="isenha"><span class="material-symbols-outlined">
+                            vpn_key
+                            </span></label>
+                        <input type="password" name="senha" id="isenha">
+                    </div>
+                    <div>
+                        <button type="submit">Entrar</button>
+                        <button>Esqueci a senha</button>
+                    </div>
                 </form>
             </div>
         </section>
