--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
 </head>
 <body>
     <main>
-        <section class="login">
+        <section class="app">
             <div class="image">
-                image
+                
             </div>
-            <div class="form">
+            <div class="login">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form method="post">
-                    <div>
+                <form method="post" autocomplete="off">
+                    <div class="info">
                         <label for="iemail"><span class="material-symbols-outlined">
                             person
                             </span></label>
-                        <input type="email" name="email" id="iemail">
+                        <input type="email" name="email" id="iemail" placeholder="seu e-mail">
                     </div>
-                    <div>
+                    <div class="info">
                         <label for="isenha"><span class="material-symbols-outlined">
                             vpn_key
                             </span></label>
-                        <input type="password" name="senha" id="isenha">
+                        <input type="password" name="senha" id="isenha" placeholder="sua senha">
                     </div>
-                    <div>
+                    <div class="buttons">
                         <button type="submit">Entrar</button>
                         <button>Esqueci a senha</button>
                     </div>
